# mako

./: .dockerignore  .gitignore  Enhencements.md  docker-compose.yml  package.json
api-rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  ecosystem.config.json  swagger.json
api-rust/deploy/litespeed/: extprocessor-dual-run.snippet  phase1-health-to-rust.snippet  phase2-api-cutover.snippet  phase3-full-cutover.snippet  rollback-nest.snippet
api-rust/deploy/nginx/: dual-run.conf
api-rust/docs/: DUAL_RUN.md
api-rust/scripts/: ci-check.sh  cutover-proxy-to-rust.sh  deploy-production.sh  dual-run-start.sh  migrate-everything.sh  retire-nest-api.sh  smoke-parity.sh
api-rust/src/: app_state.rs  config.rs  main.rs
api-rust/src/common/: error.rs  mod.rs  oauth_cookie_state.rs  token_crypto.rs
api-rust/src/common/guards/: auth.rs  mod.rs  super_admin.rs  widget_auth.rs
api-rust/src/common/middleware/: audit.rs  mod.rs  throttle.rs
api-rust/src/modules/: mod.rs
api-rust/src/modules/ads/: dto.rs  entity.rs  linkedin.rs  meta.rs  mod.rs  tiktok.rs  x.rs
api-rust/src/modules/ai/: mod.rs
api-rust/src/modules/ai_usage/: dto.rs  entity.rs  mod.rs
api-rust/src/modules/analytics/: entity.rs  mod.rs  page_insights.rs
api-rust/src/modules/approval_requests/: dto.rs  entity.rs  mod.rs
api-rust/src/modules/approval_workflows/: dto.rs  entity.rs  mod.rs
api-rust/src/modules/audit_logs/: dto.rs  entity.rs  mod.rs  service.rs
api-rust/src/modules/auth/: controller.rs  dto.rs  mod.rs  (+3 more)
api-rust/src/openapi/: mod.rs  routes.json  swagger.html
api-rust/src/services/: ai_context.rs  mistral.rs  mistral_tts.rs  mod.rs  oauth1.rs  pawapay.rs  s3_storage.rs  supabase_storage.rs
(+1339 files in other folders)
