[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Mako API (Axum + SeaORM)"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["multipart"] }
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
rust_decimal = { version = "1.42.1", features = ["serde"] }
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "multipart"], default-features = false }
sha2 = "0.10.9"
hmac = "0.12"
sha1 = "0.10"
urlencoding = "2.1.3"
aes-gcm = "0.10.3"
printpdf = "0.7"
base64 = "0.22.1"
scrypt = "0.11.0"
getrandom = "0.3.4"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
validator = { version = "0.20.0", features = ["derive"] }
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.114.0"
aws-credential-types = "1.2.13"
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
